# RAG-File-Assistant

./: .env.example  docker-compose.yml  pyproject.toml
data/files/: test_document.txt
information/: Agent Architecture.txt  Commands.txt  Critical Code Patterns.txt  Project Structure.txt  System Architecture.txt
scripts/: check_mismatch.py  debug_file_status.py  diagnose.py  init_db.py  quick_test.py  reindex_all.py  test_gemini.py  test_phase2.py  test_pipeline.py
src/: main.py
src/agent/: graph.py  memory.py  prompts.py  tools.py
src/config/: logging_config.py  settings.py
src/ingestion/: chunker.py  file_watcher.py  parsers.py  pipeline.py
src/models/: database.py  schemas.py
src/retrieval/: embeddings.py  vector_store.py
src/services/: llm.py  transcription.py
src/tg_bot/: bot.py  handlers.py
