[tool.poetry]
name = "rag-file-assistant"
version = "0.1.0"
description = "RAG-powered Telegram file assistant"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

# Core Web Framework
fastapi = "0.123.0"
uvicorn = { version = "0.24.0", extras = ["standard"] }
pydantic = "2.12.5"
pydantic-settings = "2.12.0"
python-dotenv = "1.0.0"
python-multipart = "0.0.20"  # Updated [web:26]

# Telegram Bot
python-telegram-bot = { version = "^22.0", extras = ["all"] }

# Agent Framework (LangChain)
langchain-core = "^0.2.0"        # Explicitly pin to 0.2.x series
langchain = "^0.2.0"             # Use 0.2.x (matches core 0.2.x)
langchain-community = "^0.2.0"   # Use 0.2.x (matches core 0.2.x)
langgraph = "^0.3.0"             # Works with langchain-core 0.2.x

# Vector DB & Embeddings
qdrant-client = "1.9.0"
ollama = "^0.3.0"
sentence-transformers = "2.2.0"
transformers = "4.53.0"

# Voice Processing
faster-whisper = "^1.0.0"  # Updated [web:14]

# Document Processing
unstructured = "0.18.21"
PyMuPDF = "1.26.6"
pypdf = "6.4.0"
python-docx = "1.1.0"
pandas = "2.3.3"
openpyxl = "3.1.2"
python-magic = "0.4.27"
pillow = "^11.0"  # Updated [web:27]

# Database
sqlalchemy = "2.0.44"
alembic = "1.17.2"
psycopg2-binary = "2.9.11"
asyncpg = "0.31.0"

# Task Queue & Monitoring
celery = { version = "^5.5", extras = ["redis"] }  # Updated to v5.5.x [web:6]
flower = "^2.0.0"  # Latest stable [web:25]
redis = "5.0.1"
hiredis = "^2.3"

# Async & File Utilities
aiofiles = "25.1.0"
tenacity = "8.2.3"
watchdog = "3.0.0"
tqdm = "^4.66"

# Logging
structlog = "23.2.0"
python-json-logger = "2.0.7"

[tool.poetry.dev-dependencies]
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
pytest-cov = "4.1.0"
black = "^23.12"
ruff = "^0.1"
mypy = "^1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
