[tool.poetry]
name = "rag-file-assistant"
version = "0.2.0"
description = "RAG-powered Telegram file assistant with Gemini AI"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

# Core Framework
pydantic = "^2.10"
pydantic-settings = "^2.7"
python-dotenv = "^1.0"

# Telegram Bot
python-telegram-bot = { version = "^22.0", extras = ["all"] }

# Google Gemini AI
google-generativeai = "^0.8.3"

# Agent Framework (LangChain) - Consolidated versions
langchain-core = "^0.3.0"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-google-genai = "^2.0.5"
langgraph = "^0.3.0"

# Vector DB
qdrant-client = "^1.12"

# Voice Processing
faster-whisper = "^1.1"

# Document Processing - Essential only
pypdf = "6.4.0"
python-docx = "^1.1"
pandas = "^2.2"
openpyxl = "^3.1"
pillow = "^11.0"

# Database
sqlalchemy = { version = "^2.0", extras = ["asyncio"] }
alembic = "^1.14"
psycopg2-binary = "^2.9"
asyncpg = "^0.30"

# Task Queue & Cache
redis = { version = "^5.2", extras = ["hiredis"] }

# Async & Utilities
aiofiles = "^25.0"
tenacity = "^9.0"
httpx = "^0.28"
tqdm = "^4.67"

# Logging
structlog = "^25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"
black = "^24.10"
ruff = "^0.8"
mypy = "^1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]